added event images

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,3 +14,10 @@
   max-height: 300px;
 }
 
+.eventImage {
+  flex-direction: column;
+  justify-content: center;
+  background-image: none;
+  min-height: 300px;
+  max-height: 500px;
+}
