styled nav, header - toggled stuff

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
 } */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Noto+Sans:wght@400;700;800&family=Poppins:ital,wght@0,400;0,600;1,300&display=swap');
 
 
 .venueImage {
